homelab/upkuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: homelab
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      name: web
      port: 3001
      targetPort: 3001
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: homelab
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
          image: louislam/uptime-kuma
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-nfs-pvc
